dds_ros2/scripts/rpi_config/iptables-withUDP
# Generated by iptables-save v1.8.7 on Wed Dec 13 12:23:32 2023
*filter
:INPUT ACCEPT [109735:27372089]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [90197:25220756]
# Ethernet interface
## Accept SSH incoming traffic
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j ACCEPT
## Accept custom UDP traffic
-A INPUT -i eth0 -p udp -m udp --dport 2077 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 2078 -j ACCEPT
## Drop all Ethernet traffic
-A INPUT -i eth0 -j DROP
# WLAN0 interface
## Drop custom UDP traffic
# -A INPUT -i wlan0 -p udp -m udp --dport 2077 -j DROP
# Ethernet interface
## Accept mDNS outgoing packets
-A OUTPUT -o eth0 -p udp -m udp --dport 53 -j ACCEPT
## Accept SSH outgoing traffic
-A OUTPUT -o eth0 -p tcp -m tcp --sport 22 -j ACCEPT
## Enable custom UDP traffic
-A OUTPUT -o eth0 -p udp -m udp --dport 2077 -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --dport 2078 -j ACCEPT
# Drop
-A OUTPUT -o eth0 -j DROP
#WLAN0 -> prohibit custom UDP traffic
# -A OUTPUT -o wlan0 -p udp -m udp --sport 2077 -j DROP
COMMIT
# Completed on Wed Dec 13 12:23:32 2023
